# torch_foo

./: .gitignore  CMakeLists.txt  README.md  notes.md  pyproject.toml  requirements.txt
python/torch_foo/: __init__.py
python/torch_foo/foo/: __init__.py
src/foo_core/: CMakeLists.txt
src/foo_core/include/foo_core/: operations.h
src/foo_core/src/: DummyAllocator.cpp  DummyDeviceGuard.cpp  DummyDeviceGuard.h  DummyDeviceGuardImpl.cpp  DummyDeviceGuardImpl.h  FooAllocator.cpp  FooDeviceGuard.h  FooDeviceGuardImpl.cpp  FooDeviceGuardImpl.h  aten.cpp  cpu_fallback.cpp  device_guard.cpp  operations.cpp  register_name.cpp
src/torch_foo/: CMakeLists.txt
src/torch_foo/src/: bindings.cpp
tests/: test_torch_foo.py
